--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,14 +196,15 @@ h1, h2, h3, h4, h5, h6 {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-  width: 100%;
-  height: 100vh;
-  background: url("../img/cover_pic.jpg") top center;
-  background-size: cover;
+  /*width: 100%;
+  height: 20vh;*/
+  /*background: url("../img/cover_pic.jpg") top center;*/
+  /*background: #040b14;*/
+  /*background-size: cover;*/
 }
 #hero:before {
   content: "";
-  background: rgba(5, 13, 24, 0.3);
+  /*background: rgba(5, 13, 24, 0.3);*/
   position: absolute;
   bottom: 0;
   top: 0;
@@ -218,20 +219,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero h1 {
   margin: 0 0 10px 0;
-  font-size: 64px;
+  font-size: 40px;
   font-weight: 700;
-  line-height: 56px;
-  color: #fff;
+  line-height: 45px;
+  color: #000;
+  padding-left: 10px;
 }
 #hero p {
-  color: #fff;
-  margin-bottom: 50px;
+  color: #000;
+  /*margin-bottom: 30px;*/
   font-size: 26px;
   font-family: "Poppins", sans-serif;
+  padding-left: 10px;
 }
 #hero p span {
-  color: #fff;
-  padding-bottom: 4px;
+  color: #000;
+  /*padding-bottom: 4px;*/
   letter-spacing: 1px;
   border-bottom: 3px solid #149ddd;
 }
@@ -256,7 +259,7 @@ h1, h2, h3, h4, h5, h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 30px 0;
   overflow: hidden;
 }
 
