--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,11 +196,11 @@ h1, h2, h3, h4, h5, h6 {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-  /*width: 100%;
-  height: 20vh;*/
-  /*background: url("../img/cover_pic.jpg") top center;*/
+  width: 100%;
+  height: 35vh;
+  background: url("../img/cover_pic.jpg") top center;
   /*background: #040b14;*/
-  /*background-size: cover;*/
+  background-size: cover;
 }
 #hero:before {
   content: "";
@@ -218,23 +218,23 @@ h1, h2, h3, h4, h5, h6 {
   min-width: 300px;
 }
 #hero h1 {
-  margin: 0 0 10px 0;
+  margin: 0 0 5px 0;
   font-size: 40px;
   font-weight: 700;
   line-height: 45px;
-  color: #000;
-  padding-left: 10px;
+  color: #fff;
+  padding-left: 5px;
 }
 #hero p {
-  color: #000;
-  /*margin-bottom: 30px;*/
-  font-size: 26px;
+  color: #fff;
+  margin-bottom: 30px;
+  font-size: 30px;
   font-family: "Poppins", sans-serif;
-  padding-left: 10px;
+  padding-left: 5px;
 }
 #hero p span {
-  color: #000;
-  /*padding-bottom: 4px;*/
+  color: #fff;
+  padding-bottom: 4px;
   letter-spacing: 1px;
   border-bottom: 3px solid #149ddd;
 }
@@ -245,13 +245,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 768px) {
   #hero h1 {
-    font-size: 28px;
-    line-height: 36px;
+    font-size: 24px;
+    line-height: 32px;
   }
   #hero h2 {
-    font-size: 18px;
-    line-height: 24px;
-    margin-bottom: 30px;
+    font-size: 14px;
+    line-height: 18px;
+    margin-bottom: 20px;
+  }
+  #hero p {
+    font-size: 13px;
+    line-height: 10px;
+    margin-bottom: 8px;
   }
 }
 
